Fix : 헤더 위치, z-index 수정

--- a/상벌점 홈페이지/static/css/admin/communityAdmin.css
+++ b/상벌점 홈페이지/static/css/admin/communityAdmin.css
@@ -29,7 +29,7 @@ header {
 
 .main {
     position: absolute;
-    top: 0%;
+    top: -6%;
     left: 3%;
     color: #55595D;
     font-size: 35px;
