--- a/상벌점 홈페이지/static/css/admin/communityInfoAdmin.css
+++ b/상벌점 홈페이지/static/css/admin/communityInfoAdmin.css
@@ -24,11 +24,12 @@ header {
     top: 0%;
     right: 0%;
     box-shadow: 0px 3px 3px gray;
+    z-index: 1;
 }
 
 .main {
     position: absolute;
-    top: 0%;
+    top: -6%;
     left: 3%;
     color: #55595D;
     font-size: 35px;
