--- a/상벌점 홈페이지/static/css/admin/pointReasonsAdmin.css
+++ b/상벌점 홈페이지/static/css/admin/pointReasonsAdmin.css
@@ -7,22 +7,23 @@
 
 body {
     font-family: 'KakaoSmallSans-Bold', sans-serif;
+    overflow-y: hidden;
 }
 
 header {
     width: 80%;
     height: 10%;
     background-color: white;
-    position: absolute;
+    position: fixed;
     top: 0%;
     right: 0%;
-    box-shadow: 3px 3px 3px gray;
-    background-attachment: fixed;
+    box-shadow: 0px 3px 3px gray;
+    z-index: 1;
 }
 
 .main {
     position: absolute;
-    top: 0%;
+    top: -6%;
     left: 3%;
     color: #55595D;
     font-size: 35px;
