--- a/상벌점 홈페이지/static/css/admin/studentManagementAdmin.css
+++ b/상벌점 홈페이지/static/css/admin/studentManagementAdmin.css
@@ -24,11 +24,12 @@ header {
     top: 0%;
     right: 0%;
     box-shadow: 0px 3px 3px gray;
+    z-index: 1;
 }
 
 .main {
     position: absolute;
-    top: 0%;
+    top: -6%;
     left: 3%;
     color: #55595D;
     font-size: 35px;
@@ -237,6 +238,7 @@ nav > .six{
     box-shadow: 4px 4px 18px 4px rgb(207, 207, 207);
     overflow-y: scroll;
     overflow-x: hidden;
+    z-index: -1;
 }
 
 .buttonsContainer {
